Apply some formatting and cleanup to the code